syntax = "proto3";

package com.ltv.aerospike.api.proto;

message QueryRequest {
    string namespace = 1;
    string set = 2;
    map<string, string> fields = 3;
    enum FilterOperation {
        EQ = 0;
        GT = 1;
        GTEQ = 2;
        LT = 3;
        LTEQ = 4;
        NOTEQ = 5;
        BETWEEN = 6;
        START_WITH = 7;
        ENDS_WITH = 8;
        CONTAINING = 9;
        IN = 10;
        LIST_CONTAINS = 11;
        MAP_KEYS_CONTAINS = 12;
        MAP_VALUES_CONTAINS = 13;
        LIST_BETWEEN = 14;
        MAP_KEYS_BETWEEN = 15;
        MAP_VALUES_BETWEEN = 16;
        GEO_WITHIN = 17;
        OR = 18;
        AND = 19;
    }
    map<string, FilterOperation> filter = 4;
    map<string, string> stringValue1 = 5;
    map<string, int32> intValue1 = 6;
    map<string, int64> longValue1 = 7;
    map<string, float> floatValue1 = 8;
    map<string, double> doubleValue1 = 9;
    map<string, bool> booleanValue1 = 10;
    map<string, bytes> bytesValue1 = 11;
    map<string, string> stringValue2 = 12;
    map<string, int32> intValue2 = 13;
    map<string, int64> longValue2 = 14;
    map<string, float> floatValue2 = 15;
    map<string, double> doubleValue2 = 16;
    map<string, bool> booleanValue2 = 17;
    map<string, bytes> bytesValue2 = 18;
}

message QueryResponse {
    int32 error_code = 1;
    map<string, string> stringBin = 2;
    map<string, int32> intBin = 3;
    map<string, int64> longBin = 4;
    map<string, float> floatBin = 5;
    map<string, double> doubleBin = 6;
    map<string, bool> booleanBin = 7;
    map<string, bytes> bytesBin = 8;
}

service QueryService {
    rpc query(QueryRequest) returns (stream QueryResponse);
}
